# agent_service

./: .env_example  .gitignore  Dockerfile  Dockerfile-dev  Dockerfile-prod  agent_session.py  agent_system.py  agent_system.py.backup  app.py  app_settings-dev.json  app_settings-prod.json  app_settings.json  context7_agent.py  diagnose_network.py  docker-compose-all_tools.yml  docker-compose-dev.yml  docker-compose-preprod.yml  docker-compose-prod.yml  docker-compose.yml  fix-vpn-routes.sh  langchain_adapter.py  langchain_agent.py  langchain_tools.py  plan.md  prompt_loader.py  pyproject.toml  settings.py  test_addition_integration.py  test_agent_addition_simple.py  test_openrouter.py  test_rag_tools.py  test_reformat.py  test_simple_prompt.py  test_tavily_mcp_remote.py
docs/: agent_documentation.md  agent_graph.md  async_tools_setup.md  docker_deployment.md  general.md  general_service_approach.md  network_interaction.md  rag_service_connection_issue.md  release_notes.md  test_documentation.md
docs/vpn/: adguard_vpn_setup.md  network_architecture.md  open_router_vpn.md
llm_service/: llm_client.py
plan/: agents_arch.md  new_agent_system.md  new_arhitecture.md  plan_cleanups.md  tasks.md  update_realisation.md
plans/: plan.md
prompts/: agent_prompt.txt  agent_simple_prompt.txt  intent_determination.txt  reformat_latex.txt  simple_prompt.txt  system_prompt.txt
tests/: test_agent_session.py  test_agent_session_updated.py  test_agent_system_sessions.py
tests/addititional/: test_agent_addition.py  test_context7_integration.py  test_tavily_integration.py
(+6 files in other folders)
