[project]
name = "agent-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.124.4",
    "langchain>=0.1.0,<0.2.0",
    "langchain-community>=0.0.1,<0.1.0",
    "langchain-core>=0.1.31,<0.2.0",
    "langgraph>=0.0.1,<0.1.0",
    "uvicorn>=0.38.0",
    "langchain-mistralai==0.1.0",
    "langchain-openai>=0.0.1,<0.1.0",
    "pydantic-settings>=2.0.0",
    "httpx",
    "pytest>=9.0.2",
]
